--- a/AlarmRestAPI/src/main/resources/application.properties
+++ b/AlarmRestAPI/src/main/resources/application.properties
@@ -2,9 +2,10 @@ spring.datasource.url=jdbc:mysql://3.83.24.73:3306/projectdb
 spring.datasource.username=sasitha
 spring.datasource.password=SLY@19951120
 spring.jpa.hibernate.ddl-auto=update
-spring.jpa.hibernate.naming.strategy=org.hibernate.cfg.ImprovedNamingStrategy
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 jwtSecret=dsProjectSecretKey
 jwtExpiration=900000
+
+server.port=8080
