--- a/AlarmRestAPI/src/main/resources/application.properties
+++ b/AlarmRestAPI/src/main/resources/application.properties
@@ -5,6 +5,20 @@ spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
+
+spring.mail.host = smtp.gmail.com
+spring.mail.username=username
+spring.mail.password=password
+spring.mail.port = 587
+spring.mail.properties.mail.smtp.starttls.enable=true
+
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.connectiontimeout=5000
+spring.mail.properties.mail.smtp.timeout=5000
+spring.mail.properties.mail.smtp.writetimeout=5000
+
+
+
 jwtSecret=dsProjectSecretKey
 jwtExpiration=900000
 
