Email And SMS sending Done

--- a/AlarmRestAPI/src/main/resources/application.properties
+++ b/AlarmRestAPI/src/main/resources/application.properties
@@ -6,18 +6,23 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 
-spring.mail.host = smtp.gmail.com
-spring.mail.username=username
-spring.mail.password=password
+spring.mail.host =smtp.gmail.com
+spring.mail.username=mail.dsproject@gmail.com
+spring.mail.password=jszflfaojpbpabzu
 spring.mail.port = 587
 spring.mail.properties.mail.smtp.starttls.enable=true
 
 spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.port=25
 spring.mail.properties.mail.smtp.connectiontimeout=5000
 spring.mail.properties.mail.smtp.timeout=5000
 spring.mail.properties.mail.smtp.writetimeout=5000
+spring.mail.properties.mail.transport.protocol=smtp
+spring.mail.properties.mail.smtp.starttls.required=true
 
-
+TWILIO_SID=AC1beeb7480d3244a6cdc4d05240f86db1
+TWILIO_AUTH_TOKEN=5d055930d6f2e12679006fbbb8f58d0c
+PHONE_NO=+18452500559
 
 jwtSecret=dsProjectSecretKey
 jwtExpiration=900000
