Updated RMI Application (Added Sensor Delete, Change Table colors)

--- a/Alarm_front_end/nbproject/private/private.properties
+++ b/Alarm_front_end/nbproject/private/private.properties
@@ -1,7 +1,18 @@
 do.depend=false
 do.jar=true
+file.reference.commons-codec-1.6.jar=C:\\Users\\Sasitha\\git\\alarm_rest_api\\Alarm_front_end\\commons-codec-1.6.jar
+file.reference.commons-logging-1.1.3.jar=C:\\Users\\Sasitha\\git\\alarm_rest_api\\Alarm_front_end\\commons-logging-1.1.3.jar
+file.reference.httpasyncclient-4.0.2.jar=C:\\Users\\Sasitha\\git\\alarm_rest_api\\Alarm_front_end\\httpasyncclient-4.0.2.jar
+file.reference.httpclient-4.3.6.jar=C:\\Users\\Sasitha\\git\\alarm_rest_api\\Alarm_front_end\\httpclient-4.3.6.jar
+file.reference.httpcore-4.3.3.jar=C:\\Users\\Sasitha\\git\\alarm_rest_api\\Alarm_front_end\\httpcore-4.3.3.jar
+file.reference.httpcore-nio-4.3.2.jar=C:\\Users\\Sasitha\\git\\alarm_rest_api\\Alarm_front_end\\httpcore-nio-4.3.2.jar
+file.reference.httpmime-4.3.6.jar=C:\\Users\\Sasitha\\git\\alarm_rest_api\\Alarm_front_end\\httpmime-4.3.6.jar
+file.reference.java-json.jar=C:\\Users\\Sasitha\\git\\alarm_rest_api\\Alarm_front_end\\java-json.jar
+file.reference.json-20140107.jar=C:\\Users\\Sasitha\\git\\alarm_rest_api\\Alarm_front_end\\json-20140107.jar
+file.reference.json-simple-1.1.1.jar=C:\\Users\\Sasitha\\git\\alarm_rest_api\\Alarm_front_end\\json-simple-1.1.1.jar
+file.reference.unirest-java-1.4.7.jar=C:\\Users\\Sasitha\\git\\alarm_rest_api\\Alarm_front_end\\unirest-java-1.4.7.jar
 javac.debug=true
 #Wed Apr 15 22:00:26 IST 2020
 javadoc.preview=true
 compile.on.save=true
-user.properties.file=C:\\Users\\ishan\\AppData\\Roaming\\NetBeans\\8.2rc\\build.properties
+user.properties.file=C:\\Users\\Sasitha\\AppData\\Roaming\\NetBeans\\8.1\\build.properties
