--- a/AlarmRestAPI/src/main/resources/application.properties
+++ b/AlarmRestAPI/src/main/resources/application.properties
@@ -1,6 +1,6 @@
-spring.datasource.url=jdbc:mysql://3.83.24.73:3306/projectdb
-spring.datasource.username=sasitha
-spring.datasource.password=SLY@19951120
+spring.datasource.url=jdbc:mysql://localhost:3306/projectdb
+spring.datasource.username=root
+spring.datasource.password=
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
